--- a/Frontend/eduka-interface/src/index.html
+++ b/Frontend/eduka-interface/src/index.html
@@ -4,7 +4,10 @@
   
   <!-- Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css"> 
-  
+
+  <!-- Materialize JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
@@ -12,8 +15,13 @@
   <title>EDUKA</title>
   
   <base href="/">
-  
+   
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('select').material_select();
+    });
+  </script>
 </head>
 <body>
 	<!-- app root is entry point of app -->
