--- a/Frontend/eduka-interface/src/index.html
+++ b/Frontend/eduka-interface/src/index.html
@@ -15,7 +15,7 @@
   <title>EDUKA</title>
 
   <base href="/">
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript">
     $(document).ready(function() {
